[gd_scene load_steps=7 format=3 uid="uid://dxa563dstk7gq"]

[ext_resource type="Texture2D" uid="uid://ct67ih6h708ri" path="res://Characters/Boulder/boulder_spritesheet.png" id="1_3dh2y"]
[ext_resource type="Script" path="res://Characters/Boulder/boulder.gd" id="1_yn5gv"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_c0pa0"]
radius = 30.0
height = 124.0

[sub_resource type="Animation" id="Animation_jcaad"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_rxw63"]
resource_name = "ShatterBoulder"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_c8q0w"]
_data = {
"RESET": SubResource("Animation_jcaad"),
"ShatterBoulder": SubResource("Animation_rxw63")
}

[node name="Boulder" type="StaticBody2D"]
script = ExtResource("1_yn5gv")

[node name="BoulderCollisionShape" type="CollisionShape2D" parent="."]
position = Vector2(0, -8)
rotation = -1.5708
shape = SubResource("CapsuleShape2D_c0pa0")

[node name="BoulderArea" type="Area2D" parent="."]

[node name="BoulderAreaShape" type="CollisionShape2D" parent="BoulderArea"]
position = Vector2(0, -8)
rotation = -1.5708
shape = SubResource("CapsuleShape2D_c0pa0")
debug_color = Color(0.890196, 0.184314, 0.658824, 0.419608)

[node name="BoulderSprite" type="Sprite2D" parent="."]
position = Vector2(0, -30)
texture = ExtResource("1_3dh2y")
hframes = 4

[node name="BoulderAnimations" type="AnimationPlayer" parent="."]
root_node = NodePath("../BoulderSprite")
libraries = {
"": SubResource("AnimationLibrary_c8q0w")
}

[connection signal="area_entered" from="BoulderArea" to="." method="_on_boulder_area_area_entered"]
